# fenestr

./: .gitignore  CHANGELOG.md  CICD_EXPLAINED.md  README.md  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml
demo/: demo_notebook.ipynb
src/fenestr/: __init__.py  core.py  exceptions.py  logger.py  site.py  validators.py  youtube.py
src/fenestr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_core.py  test_site.py  test_validators.py  test_youtube.py
