[metadata]
name = fenestr
version = 0.1.0
author = Your Name
author_email = you@example.com
description = A window into the web — render YouTube videos and websites inside Jupyter Notebook cells
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = jupyter, notebook, youtube, iframe, embed, datascience
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ipython>=7.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    flake8>=5.0.0
    mypy>=1.0.0
    tox>=4.0.0

[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    .tox,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.8
strict = true
ignore_missing_imports = true
